wwr/styles/rafting.css
* {
    font-family: Ubuntu, Verdana, sans-serif;
    padding: 5px;
    max-width: 100%;
    position: initial;
}

:root {
    --primary-color: rgba(26 42 73 / 1);
    /* #1A2A49; */
    --secondary-color: white;
    /* rgba(255 255 255 / 1), #fff, #ffffff; */
    --accent1-color: rgba(253 232 41 / 1);
    /* #FDE829; */
    --accent2-color: rgba(251 126 78 / 1);
    /* #FB7E4E; */
    --text-color: rgba(0 0 0 / 1);
    /* black, #000, #000000; */
    --background-color: rgba(95 151 71 / 1);
    /* #5F9747; */
    --border-color: rgba(209 85 96 / 1);
    /* #D15560; */
    --heading-font: Sriracha, Tahoma, sans-serif;
    --font-text: Ubuntu, Verdana, sans-serif;
    --padding: 10px;
    --border: 1px solid rgba(0 0 0 / 0.3);
    --margin: 5px auto;
}

/* fonts */
.sriracha-regular {
    font-family: "Sriracha", cursive;
    font-weight: 400;
    font-style: normal;
}

.ubuntu-light {
    font-family: "Ubuntu", sans-serif;
    font-weight: 300;
    font-style: normal;
}

.ubuntu-regular {
    font-family: "Ubuntu", sans-serif;
    font-weight: 400;
    font-style: normal;
}

.ubuntu-medium {
    font-family: "Ubuntu", sans-serif;
    font-weight: 500;
    font-style: normal;
}

.ubuntu-bold {
    font-family: "Ubuntu", sans-serif;
    font-weight: 700;
    font-style: normal;
}

.ubuntu-light-italic {
    font-family: "Ubuntu", sans-serif;
    font-weight: 300;
    font-style: italic;
}

.ubuntu-regular-italic {
    font-family: "Ubuntu", sans-serif;
    font-weight: 400;
    font-style: italic;
}

.ubuntu-medium-italic {
    font-family: "Ubuntu", sans-serif;
    font-weight: 500;
    font-style: italic;
}

.ubuntu-bold-italic {
    font-family: "Ubuntu", sans-serif;
    font-weight: 700;
    font-style: italic;
}

/* end of fonts */

.hero {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    max-width: 100%;
    min-width: 610px;
    position: relative;
    min-height: 450px;
}

.hero h1 {
    background-color: rgba(251 126 78 / .3);
}

.hero img {
    width: 1000px;
}

.team {
    border: 1px solid black;
    padding: 0;
    box-shadow: 0 0 30px #5F9747;
    float: right;
    margin: 0 0 1rem 1rem;
    text-align: justify;
}

.hero-text img {
    width: 150px;
    height: auto;
    border: 1px solid black;
    padding: 0;
    box-shadow: 0 0 30px #5F9747;
    float: right;
    margin: 0 0 1rem 1rem;
}

header {
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-content: space-around;
    align-items: center;
    background-color: var(--float-background-color)
}

h1 {
    background-color: var(--float-background-color);
    color: var(--secondary-color);
    font-family: var(--heading-font);
    font-size: 2rem;
    padding: var(--padding);
    border: var(--border);
    margin-top: 0;
    position: absolute;
    transform: translate(0%, -260px);
}

article {
    font-style: italic;
    position: absolute;
    transform: translate(0%, -100px);
}

.split {
    display: grid;
    grid-template-columns: repeat(2, auto);
    grid-template-rows: 1fr;
    gap: 5px;
    align-items: center;
}

h2 {
    background-color: var(--primary-color);
    color: var(--secondary-color);
    font-family: var(--heading-font);
    padding: var(--padding);
    border: var(--border);
    margin: var(--margin);
    display: grid;
    text-align: center;
}

.history {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 10px;
    text-align: justify;
}

.adventure {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    column-gap: 2px;
    text-align: center;
}

.adventure img {
    max-width: 180px;
}

footer {
    text-align: center;
}

footer img {
    width: 50px;
    height: auto;
}

footer aside a {
    text-decoration: none;
}

/* Comments go down here */
/* https://coolors.co/palette/d15560-fb7e4e-fde829-5f9747-1a2a49 */

